--- a/templates/user/users.html
+++ b/templates/user/users.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css" rel="stylesheet" />
 </head>
 <body>
-    
+
+    {% include 'nav.html'%}
+  
+       
     <form action="{% url 'filtered_user' %}" method="get">
         <label for="fname">First name:</label><br>
         <input type="text" id="fname" name="name" value=""><br>
@@ -21,6 +25,9 @@
             <p>{{worker.name}} {{worker.surname}}</p>
         {%endfor%}
     {%endif%}
+
+    <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
+
 </body>
 </html>
 
